--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -528,6 +528,7 @@
 "Lifebox can sync your files automatically." = "lifebox fotoğraf ve videolarını otomatik olarak yedekleyebilir.\n\nFotoğraf ve videolarının arka planda yedeklenebilmesi için, lütfen lifebox konum izninin \"cihaz ayarları-lifebox-konum\" menüsü altında \"Her Zaman\" olarak ayarlandığına emin ol.";
 "Get Started" = "Başla";
 "I have read and accepted terms of use" = "Kullanım koşullarını okudum ve kabul ettim.";
+"Welcome to Lifebox!" = "lifebox’a hoş geldin!";
 "You need to confirm the User Agreement to continue." = "Devam edebilmek için Kullanıcı Sözleşmesi'ni onaylaman gerekiyor.";
 "PhotosAndViedos" = "Fotoğraflar ve videolar";
 "Are these the same person?" = "Bunlar aynı kişiler mi?";
@@ -1602,12 +1603,12 @@
 "contact_phase2_error_backup_title" = "Yedekleme yapılamadı!";
 "contact_phase2_error_restore_title" = "Telefona aktarım yapılamadı!";
 "contact_phase2_error_delete_title" = "Silme işlemi yapılamadı!";
-"gallery_filter_all" = "";
-"gallery_filter_synced" = "";
-"gallery_filter_unsynced" = "";
-"gallery_filter_action_sheet_all" = "";
-"gallery_filter_action_sheet_synced" = "";
-"gallery_filter_action_sheet_unsynced" = "";
+"gallery_filter_all" = "Göster: Tümü";
+"gallery_filter_synced" = "Göster: Yedeklenmiş öğeler";
+"gallery_filter_unsynced" = "Göster: Yedeklenmemiş öğeler";
+"gallery_filter_action_sheet_all" = "Tümü";
+"gallery_filter_action_sheet_synced" = "Yedeklenmiş öğeler";
+"gallery_filter_action_sheet_unsynced" = "Yedeklenmemiş öğeler";
 "contact_phase2_error_quota_restore" = "Saklama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
 "contact_phase2_error_quota_backup" = "Saklama alanında yer kalmadığı için işleme devam edemiyorsun. Saklama alanını yükseltebilir veya dosyalarını silerek saklama alanında yer açabilirsin.";
 "contact_phase2_error_message" = "Geçici bir hata oluştu. Lütfen tekrar deneyin.";
@@ -1616,4 +1617,5 @@
 "contact_phase2_result_delete_backup_nav_bar_title" = "Yedeği Sil";
 "contact_phase2_result_delete_duplicates_nav_bar_title" = "Tekrarlayanları Sil";
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Kişileri Sil";
-"eula_title" = "";
+"eula_title" = "Kullanıcı Sözleşmesi";
+"photo_video_empty_no_unsync_photos_title" = "Tüm dosyaların yedekli.";
