--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -528,6 +528,7 @@
 "Lifebox can sync your files automatically." = "lifebox-i mund të sinkronizojë automatikisht fotot dhe videot tuaja.\nPër të mundësuar sinkronizimin në sfond të fotove dhe videove tuaja, sigurohuni që leja juaj e vendndodhjes të jetë vendosur \"GJITHMON\" nën menunë tuaj \"Cilësimet e pajisjes-kutia e jetës\".";
 "Get Started" = "Filloni";
 "I have read and accepted terms of use" = "Unë i kam lexuar dhe pranuar kushtet e përdorimit.";
+"Welcome to Lifebox!" = "Mirë se vini në lifebox!";
 "You need to confirm the User Agreement to continue." = "Për të vazhduar, ju duhet të konfirmoni Marrëveshjen e Përdoruesit.";
 "PhotosAndViedos" = "Fotot dhe Videot";
 "Are these the same person?" = "A janë këta i njëjti person?";
@@ -1635,12 +1636,12 @@
 "contact_phase2_error_backup_title" = "Rezervimi nuk është mundur të kryhet!";
 "contact_phase2_error_restore_title" = "Transferimi në telefon nuk është mundur të kryhet!";
 "contact_phase2_error_delete_title" = "Veprimi i fshirjes nuk është mundur të kryhet!";
-"gallery_filter_all" = "";
-"gallery_filter_synced" = "";
-"gallery_filter_unsynced" = "";
-"gallery_filter_action_sheet_all" = "";
-"gallery_filter_action_sheet_synced" = "";
-"gallery_filter_action_sheet_unsynced" = "";
+"gallery_filter_all" = "Trego: Të gjitha";
+"gallery_filter_synced" = "Trego: Artikuj të kopjuar për tu ringarkuar ";
+"gallery_filter_unsynced" = "Trego: Artikujt që nuk janë kopjuar për tu ringarkuar";
+"gallery_filter_action_sheet_all" = "Të gjitha";
+"gallery_filter_action_sheet_synced" = "Artikuj të kopjuar për tu ringarkuar";
+"gallery_filter_action_sheet_unsynced" = "Artikujt që nuk janë kopjuar për tu ringarkuar";
 "contact_phase2_error_quota_restore" = "Nuk mund të vazhdosh në veprim sepse nuk ka mbetur vend në hapësirën tënde të ruajtjes. Mund të zmadhosh hapësirën e ruajtjes  ose të lirosh  hapësirën e ruajtjes duke i fshirë  skedarët e tua.";
 "contact_phase2_error_quota_backup" = "Nuk mund të vazhdosh në veprim sepse nuk ka mbetur vend në hapësirën tënde të ruajtjes. Mund të zmadhosh hapësirën e ruajtjes  ose të lirosh  hapësirën e ruajtjes duke i fshirë  skedarët e tua.";
 "contact_phase2_error_message" = "Ka ndodhur një gabim i përkohshëm. Ju lutemi provojeni përsëri.";
@@ -1649,4 +1650,5 @@
 "contact_phase2_result_delete_backup_nav_bar_title" = "Fshije rezervën";
 "contact_phase2_result_delete_duplicates_nav_bar_title" = "Fshiji të përsëriturat";
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Fshiji  personat";
-"eula_title" = "";
+"eula_title" = "Marrëveshja e Përdoruesit";
+"photo_video_empty_no_unsync_photos_title" = "Të gjitha skedarët janë të kopjuar për tu ringarkuar.";
