--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -522,6 +522,7 @@
 "Lifebox can sync your files automatically." = "Lifebox kann Ihre Dateien automatisch synchronisieren.\nUm die Hintergrundsynchronisierung Ihrer Fotos und Videos zu aktivieren, vergewissern Sie sich, dass Ihre Standortberechtigung im Menü \"Geräteeinstellungen-Lebensbox-Standort\" auf \"IMMER\" eingestellt ist.";
 "Get Started" = "Loslegen";
 "I have read and accepted terms of use" = "Ich habe die Nutzungsbedingungen gelesen und akzeptiert";
+"Welcome to Lifebox!" = "Willkommen bei der Lifebox!";
 "You need to confirm the User Agreement to continue." = "Sie müssen die Benutzervereinbarung bestätigen, um fortzufahren.";
 "PhotosAndViedos" = "Fotos und Videos";
 "Are these the same person?" = "Sind das die gleichen Personen?";
@@ -1592,12 +1593,12 @@
 "contact_phase2_error_backup_title" = "Backup fehlgeschlagen!";
 "contact_phase2_error_restore_title" = "Übertragung auf das Handy fehlgeschlagen!";
 "contact_phase2_error_delete_title" = "Löschen fehlgeschlagen!";
-"gallery_filter_all" = "";
-"gallery_filter_synced" = "";
-"gallery_filter_unsynced" = "";
-"gallery_filter_action_sheet_all" = "";
-"gallery_filter_action_sheet_synced" = "";
-"gallery_filter_action_sheet_unsynced" = "";
+"gallery_filter_all" = "Zeige: Alles";
+"gallery_filter_synced" = "Zeige: Gesicherte Elemente";
+"gallery_filter_unsynced" = "Zeige: Nicht gesicherte Elemente";
+"gallery_filter_action_sheet_all" = "Alle";
+"gallery_filter_action_sheet_synced" = "Gesicherte Elemente";
+"gallery_filter_action_sheet_unsynced" = "Nicht gesicherte Elemente";
 "contact_phase2_error_quota_restore" = "Sie können die Verarbeitung nicht fortsetzen, da kein Speicherplatz vorhanden ist. Sie können den Speicher erhöhen oder Dateien löschen um Speicherplatz freizugeben.";
 "contact_phase2_error_quota_backup" = "Sie können die Verarbeitung nicht fortsetzen, da kein Speicherplatz vorhanden ist. Sie können den Speicher erhöhen oder Dateien löschen um Speicherplatz freizugeben.";
 "contact_phase2_error_message" = "Ein vorübergehender Fehler ist aufgetreten. Bitte versuchen Sie es erneut.";
@@ -1606,4 +1607,5 @@
 "contact_phase2_result_delete_backup_nav_bar_title" = "Backup löschen";
 "contact_phase2_result_delete_duplicates_nav_bar_title" = "Duplikate löschen";
 "contact_phase2_result_delete_all_contacts_nav_bar_title" = "Kontakte löschen";
-"eula_title" = "";
+"eula_title" = "Nutzungsbedingungen";
+"photo_video_empty_no_unsync_photos_title" = "Alle Dateien werden gesichert";
